# nltiming

./: .gitignore  DESIGN_NOTES.md  LICENSE  Makefile  README.md  TRANSFORMED_SPACE_FIT.md  pyproject.toml
.github/workflows/: ci.yml
examples/notebooks/: 01_nonlinear_timing_charts.ipynb  02_geometry_certification_and_pivot.ipynb  03_j1640_decentering_validation.ipynb  04_j1640_marginalization_validation.ipynb  README.md
src/nltiming/: __init__.py  artifacts.py  bijectors.py  component.py  coordinates.py  decentering.py  evaluator.py  expansion.py  frames.py  geometry.py  inference.py  linearity.py  linearization.py  metric.py  nonlinear_timing_model.py  partition.py  physical_charts.py  pint_compat.py  policy.py  precision.py  priors.py  protocols.py  run_io.py  selection.py  space.py  units.py  whitening.py
src/nltiming/backends/: __init__.py  base.py  composite.py  engines.py  jug.py  jug_jax_state.py  pint.py  tempo2.py  vela.py
src/nltiming/engines/: __init__.py  base.py  composite.py  engines.py  jug.py  pint.py  tempo2.py  vela.py
src/nltiming/frontends/: __init__.py  discovery.py  enterprise.py
src/nltiming/likelihoods/: __init__.py  discovery.py  enterprise.py
src/nltiming/sampling/: __init__.py  numpyro.py  ptmcmc.py
tests/: _planhelp.py  conftest.py  test_coordinate_policy.py  test_cross_frontend_parity.py  test_cross_likelihood_agreement.py  test_decentered_model.py  test_decentering.py  test_dynamic_transport.py  test_engine_binary_capability.py  test_frames.py  test_geometry_certification.py  test_geometry_kernel.py  test_inference_default.py  test_inference_plan.py  test_joint_model.py  test_linearity.py  test_physical_charts.py  test_physical_charts_context.py  test_physical_charts_residual_invariance.py  test_run_decoding.py  test_run_io.py  test_run_io_binary_chart.py  test_timing_artifacts.py  test_timing_backends.py  test_timing_component.py  test_timing_composite_backend.py  test_timing_composite_engine.py  test_timing_engines.py  test_timing_evaluator.py  test_timing_expansion.py  test_timing_exports.py  test_timing_jug_jax_backend.py  test_timing_jug_jax_engine.py  test_timing_lifecycle.py  test_timing_linearization.py  test_timing_multi_pulsar.py  test_timing_param_selection.py  test_timing_partition.py  test_timing_prior_frames.py  test_timing_prior_override_policy.py  (+8 more)
